fixed neighboring delete buttons being invisible when tabbed over

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -108,6 +108,10 @@ h1 {
   margin-left: 0.3rem;
 }
 
+.delete-button:focus .delete-image {
+  opacity: 1;
+}
+
 .form-container {
   width: 100%;
   padding: var(--form-container-padding);
